# SEC-MCP

./: .gitignore  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  LICENSE  README.md  cursor-plug.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup_all_mcps.sh  start-mcp.bat  start-mcp.sh
Easy-MCP-Template/: start-mcp.sh
FinancialMCPs/: CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_MCP_STATUS.md  DATA_QUALITY_ASSESSMENT.md  FINANCIAL_BEAST_GUIDE.md  INTEGRATION_GUIDE.md  MCP_FIX_SUMMARY.md  MCP_TEST_RESULTS.md  PHD_FEATURES_GUIDE.md  PHD_UPGRADE_SUMMARY.md  QUICK_REFERENCE.md  RESEARCH_EXAMPLES.md  TROUBLESHOOTING.md  TROUBLESHOOTING_FIXES.md  claude_test.txt  fix_critical_issues.py  fix_mcp_errors.py  fix_mcps.sh  fix_session_issues.py  install_all_deps.sh  quick_test_mcps.sh  test_all_mcps.py  test_data_extraction_quality.py  test_mcp.py  test_mcp_debug.py  test_mcps_via_claude.sh  test_phd_features.py  test_report.md  test_single_mcp.py  test_single_mcp.sh  upgrade_to_phd_level.py  verify_imports.py
FinancialMCPs/ALTERNATIVE_DATA_SCRAPER/: pyproject.toml  start-mcp.sh
FinancialMCPs/ALTERNATIVE_DATA_SCRAPER/src/: main.py
FinancialMCPs/ANALYST_RATINGS_SCRAPER/: CLAUDE_DESKTOP_GUIDE.md  pyproject.toml
FinancialMCPs/ANALYST_RATINGS_SCRAPER/src/: main.py
FinancialMCPs/ECONOMIC_DATA_COLLECTOR/: pyproject.toml
FinancialMCPs/ECONOMIC_DATA_COLLECTOR/src/: main.py
FinancialMCPs/INDUSTRY_ASSUMPTIONS_ENGINE/: README.md  pyproject.toml  start-mcp.bat
FinancialMCPs/INDUSTRY_ASSUMPTIONS_ENGINE/src/: main.py
FinancialMCPs/INSTITUTIONAL_SCRAPER/: QUICKSTART_CLAUDE.md  pyproject.toml
FinancialMCPs/INSTITUTIONAL_SCRAPER/src/: main.py
FinancialMCPs/NEWS_SENTIMENT_SCRAPER/: pyproject.toml
FinancialMCPs/NEWS_SENTIMENT_SCRAPER/src/: main.py
FinancialMCPs/RESEARCH_ADMINISTRATOR/: README.md  pyproject.toml
FinancialMCPs/RESEARCH_ADMINISTRATOR/src/: main.py
FinancialMCPs/SEC_SCRAPER_MCP/: pyproject.toml  start-mcp.sh
FinancialMCPs/SEC_SCRAPER_MCP/src/: advanced_sec_scraper.py  main.py
FinancialMCPs/X_SENTIMENT_MCP/: pyproject.toml
FinancialMCPs/X_SENTIMENT_MCP/src/: main.py
FinancialMCPs/shared/: __init__.py  advanced_nlp.py  data_cache.py  financial_analysis.py  research_report_generator.py  xbrl_parser.py
src/: edgar_client.py  financial_data_client.py  main.py  market_data_client.py
tests/: test_edgar_client.py  test_integration.py  test_mcp_server.py
