[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyst-ratings-scraper-mcp"
version = "0.1.0"
description = "MCP Server for scraping analyst ratings"
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "click",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "mcp[cli]",
    "starlette",
    "uvicorn",
    "httpx",
    "aiohttp",
    "beautifulsoup4",
    "lxml",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 