[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-scraper-mcp"
version = "0.1.0"
description = "SEC EDGAR Financial Data Scraper MCP Server"
requires-python = ">=3.10"
dependencies = [
    "anyio",
    "click",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "mcp[cli]",
    "starlette",
    "uvicorn",
    "httpx",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 