[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-sentiment-mcp"
version = "1.0.0"
description = "X (Twitter) Financial Sentiment Analysis MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]